# notification_service

./: .env.example  .gitignore  Dockerfile.web  Dockerfile.worker  README.md  docker-compose.yml  pyproject.toml
apps/core/: models.py  views.py
apps/core/migrations/: 0001_initial.py
apps/notifications/: admin.py  enums.py  models.py  serializers.py  services.py  tests_attachments.py  tests_idempotency.py  tests_rate_limit.py  tests_templates.py  urls.py  views.py
apps/notifications/consumers/: rabbitmq_consumer.py
apps/notifications/management/commands/: run_consumer.py
apps/notifications/migrations/: 0001_initial.py  0002_notificationtemplate.py  0003_notificationattachment.py  0004_webhooksubscription_webhookattempt.py  0005_remove_webhooksubscription_user_and_more.py
apps/notifications/providers/: email_provider.py  telegram_provider.py
apps/notifications/services/: notification_service.py
apps/notifications/tasks/: registry.py  send_email.py  send_notification.py  send_telegram.py
apps/users/: models.py  serializers.py  views.py
apps/users/migrations/: 0001_initial.py
config/: celery.py  settings.py  urls.py
